--- a/Programmer.html
+++ b/Programmer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Colton Adkins' Portfolio</title>
+    <title>Colton Adkins' Programmer Portfolio</title>
     <style>
         body{
             background-color: black;
@@ -15,13 +15,6 @@
             font-family: "Palatino Linotype";
             color: white;
         }
-        p{
-            font-size: 50px;
-            color: white;
-            padding: 200px 200px;
-            text-align: center;
-        }
-
 
     </style>
 </head>
@@ -32,9 +25,7 @@
           <a class="navbar-brand" href="Chef.html">Chef</a>
           <a class="navbar-brand" href="Contact.html">Contact</a>
     </nav>
-    <header><h1>Colton Adkins' Portfolio</h1></header>
-
-    <p>Colton Adkins is a jack of all trades. Click a link above to learn more about one of his many trades.</p>
+<header><h1>Colton Adkins' Programmer Portfolio</h1></header>
 
 
 
