--- a/Chef.html
+++ b/Chef.html
@@ -15,7 +15,32 @@
             font-family: "Palatino Linotype";
             color: white;
         }
+        p{
+            color: white;
+        }
+        img{
+            float: left
+        }
+        #location{
+            color: gray ;
+        }
+        #date{
+            color: lime;
+        }
 
+        hr {
+            color: white;
+            display: block;
+            margin-top: 0.5em;
+            margin-bottom: 0.5em;
+            margin-left: auto;
+            margin-right: 800px;
+            border-style: inset;
+            border-width: 1px;
+        }
+        #lefty{
+            float:right
+        }
     </style>
 </head>
 <body>
@@ -25,8 +50,31 @@
           <a class="navbar-brand" href="Chef.html">Chef</a>
           <a class="navbar-brand" href="Contact.html">Contact</a>
     </nav>
-<header><h1>Colton Adkins' Chef Portfolio</h1></header>
+    <header><h1>Colton Adkins' Chef Portfolio</h1></header>
 
+    <img src="IMG_2791.jpg" alt="Chef drop">
+    <img id="lefty" src="cooking.jpg" alt="Chef right">
+    <div class="container" id="resume">
+        <p id="date">2017 - 2018</p>
+        <p id="location">St. Honore Bakery</p>
+        <p id="title"> Lead Prep</p>
+        <hr>
+        <p id="date">2016-2017</p>
+        <p id="location">Marukin Ramen</p>
+        <p id="title">Kitchen Manager</p>
+        <hr>
+        <p id="date">2015-2016</p>
+        <p id="location">Biwa</p>
+        <p id="title">Am Prep Cook</p>
+        <hr>
+        <p id="date">2014-2016</p>
+        <p id="location">Cocotte Bistro</p>
+        <p id="title">Sous Chef</p>
+        <hr>
+        <p id="date">2014-2014</p>
+        <p id="location">Bollywood Theater</p>
+        <p id="title">Lead Line Cook</p>
+    </div>
 
 
 
